[package]
name = "rso"
version = "0.1.0"
edition = "2024"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04","-serial", "stdio",
        "-display", "none"
]
test-success-exit-code = 33

[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
spin = "0.10.0"
volatile = "0.2.6"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.8.0"
linked_list_allocator = "0.9.0"